# TrustMock

./: .gitignore  README.md  Test  build.gradle  settings.gradle
apps/frontend/: README.md  package-lock.json  tailwind.config.js  tsconfig.json
apps/frontend/src/components/: ServiceRow.tsx
backend/src/main/java/com/trustmock/controller/: HealthController.java
backend/src/main/java/com/trustmock/service/: MockService.java  ToggleService.java
backend/src/main/resources/: TRUSTMOCK_OVERVIEW.md  application.yml
docs/: backend-api.md
frontend/: package.json
frontend/src/: App.tsx
frontend/src/pages/: Settings.tsx
services/ai-service/: .env.example  build.gradle  pyproject.toml  requirements.txt
services/ai-service/src/trustmock_ai/: __init__.py
services/ai-service/src/trustmock_ai/agents/: __init__.py
services/ai-service/src/trustmock_ai/chains/: __init__.py
services/ai-service/src/trustmock_ai/graphs/: __init__.py
services/backend/: build.gradle  settings.gradle
services/backend/src/main/resources/: application.properties
trustmock-backend/: TRUSTMOCK_METADATA.txt  build.gradle  settings.gradle
trustmock-backend/misc/collections/: TrustMock-API.postman_collection.json
trustmock-backend/src/main/java/com/trustmock/: TrustMockApplication.java
trustmock-frontend/: index.html
trustmock-frontend/src/: index.css
trustmock-frontend/src/components/: MockEditor.tsx  Toggle.tsx
trustmock-frontend/src/pages/: Dashboard.tsx  ServiceMonitor.tsx
trustmock-frontend/src/service/: api.ts
(+17 files in other folders)
